--- a/23_06_14_간단한_슬랙알림만들기.md
+++ b/23_06_14_간단한_슬랙알림만들기.md
@@ -16,7 +16,7 @@
 
 - [x] CloudWatch에 경보설정을 활용하여 진행하기로 함
 
-## 설계
+## 설계 (Result)
 
 ![alarm](./public/1.png)
 
@@ -32,6 +32,7 @@
 ```golang
 코드 딱히 어려운건 없어서 귀찮아서 안올림
 
+// Makefile은 잘짠거같음
 clear:
 	@rm -rf main
 
